# CrossPlatformDesktopAppTester

./: .gitignore  README.md  pyproject.toml
examples/calculator_test/: project.yaml
examples/calculator_test/tests/: test_basic_addition.yaml  test_deliberate_failure.yaml  test_multiplication.yaml
examples/outlook/: project.yaml
examples/test_chrome/: project.yaml
examples/test_chrome/tests/: test_goes_to_google.yaml
my_project/: project.yaml
my_project/tests/: test_example.yaml
src/desktop_tester/: __init__.py  __main__.py  constants.py  exceptions.py
src/desktop_tester/cli/: init_cmd.py  main.py  report_cmd.py  run_cmd.py
src/desktop_tester/core/: __init__.py  app_manager.py  element.py  engine.py  locator.py  macos_backend.py  platform_base.py  windows_backend.py
src/desktop_tester/gui/: app.py  main_window.py
src/desktop_tester/gui/dialogs/: new_project.py  new_test.py
src/desktop_tester/gui/models/: step_list_model.py  test_tree_model.py
src/desktop_tester/gui/widgets/: app_selector.py  code_editor.py  results_panel.py  step_editor.py  (+4 more)
src/desktop_tester/models/: __init__.py  element_ref.py  project.py  serialization.py  step.py
src/desktop_tester/recorder/: element_resolver.py  event_listener.py  event_to_step.py  recorder.py  step_optimizer.py
src/desktop_tester/reporter/: html_reporter.py  json_reporter.py  reporter.py
src/desktop_tester/runner/: assertion_executor.py  context.py  hooks.py  runner.py  step_executor.py
tests/: conftest.py
tests/unit/: test_locator.py  test_models.py  test_serialization.py  test_step_optimizer.py
(+1 files in other folders)
